@@ -1,4 +1,5 @@
 # Version 0.5.0
+- Show additional message dialog if measurements was changed. Related to issue [#440].
 - [#132] Intersect Curves.
 - Added language Chinese (China).
 - New icon for VAL file. Updated Tape logo. Updated ico for standard measurements.
